--- a/bot/package.json
+++ b/bot/package.json
@@ -8,9 +8,8 @@
   },
   "author": "Aravill",
   "dependencies": {
-    "discord.io": "^2.5.3",
     "discord.js": "^11.2.1",
     "fs": "0.0.1-security",
-    "winston": "^2.4.0"
+    "node-fetch": "^1.7.3"
   }
 }
